--- a/House_Price_Analysis.ipynb
+++ b/House_Price_Analysis.ipynb
@@ -30,7 +30,7 @@
    "source": [
     "def read_df(file_path):\n",
     "    df = pd.read_csv(file_path)\n",
-    "    print(\"Shape of \", file_path ,\": (\", rows_train,', ', columns_train, ')')\n",
+    "    # print(\"Shape of \", file_path ,\": (\", rows_train,', ', columns_train, ')')\n",
     "    return df\n",
     "house_train = read_df('https://raw.githubusercontent.com/NirmalSankalana/housing_prices_analyse/main/train.csv')\n",
     "house_test = read_df('https://raw.githubusercontent.com/NirmalSankalana/housing-prices-analyse/main/test.csv')"
@@ -1902,6 +1902,17 @@
     "3. Neural Network\n",
     "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.preprocessing import StandardScaler\n",
+    "scaler = StandardScaler()\n",
+    "X = scaler.fit_transform(X)"
    ]
   },
   {
