--- a/House_Price_Analysis.ipynb
+++ b/House_Price_Analysis.ipynb
@@ -1906,7 +1906,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 319,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1956,19 +1956,43 @@
    "outputs": [],
    "source": [
     "from sklearn.model_selection import RandomizedSearchCV\n",
-    "n_estimators = [int(x) for x in np.linspace(start = 200, stop = 2000, num = 10)]\n",
+    "###### Random Grid #1 ######\n",
+    "# n_estimators = [int(x) for x in np.linspace(start = 200, stop = 2000, num = 10)]\n",
+    "# max_features = ['auto', 'sqrt']\n",
+    "# max_depth = [int(x) for x in np.linspace(10, 200, num = 11)]\n",
+    "# max_depth.append(None)\n",
+    "# min_samples_split = [2, 3, 4, 5, 6, 8, 10]\n",
+    "# min_samples_leaf = [1, 2, 3, 4, 5, 6, 8, 10]\n",
+    "# bootstrap = [True, False]\n",
+    "\n",
+    "# {'n_estimators': 600,\n",
+    "#  'min_samples_split': 2,\n",
+    "#  'min_samples_leaf': 2,\n",
+    "#  'max_features': 'sqrt',\n",
+    "#  'max_depth': 48,\n",
+    "#  'bootstrap': False}\n",
+    "\n",
+    "# R Square: 0.6958759642175407 \n",
+    "#  MSE: 1005233966.2461799 \n",
+    "#  RMSE: 31705.424870929895 \n",
+    "#  MAE: 21326.191820551376\n",
+    "\n",
+    "\n",
+    "###### Random Grid #2 ######\n",
+    "n_estimators = [int(x) for x in np.linspace(start = 100, stop = 1000, num = 5)]\n",
     "max_features = ['auto', 'sqrt']\n",
-    "max_depth = [int(x) for x in np.linspace(10, 200, num = 11)]\n",
+    "max_depth = [int(x) for x in np.linspace(10, 100, num = 5)]\n",
     "max_depth.append(None)\n",
-    "min_samples_split = [2, 3, 4, 5, 6, 8, 10]\n",
-    "min_samples_leaf = [1, 2, 3, 4, 5, 6, 8, 10]\n",
+    "min_samples_split = [1, 2, 3, 4, 5]\n",
+    "min_samples_leaf = [1, 2, 3, 4, 5]\n",
     "bootstrap = [True, False]\n",
+    "\n",
     "random_grid = {'n_estimators': n_estimators,\n",
     "               'max_features': max_features,\n",
     "               'max_depth': max_depth,\n",
     "               'min_samples_split': min_samples_split,\n",
     "               'min_samples_leaf': min_samples_leaf,\n",
-    "               'bootstrap': bootstrap}"
+    "               'bootstrap': bootstrap}\n"
    ]
   },
   {
@@ -1986,39 +2010,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 317,
+   "execution_count": 326,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "RandomForestRegressor(bootstrap=False, max_depth=10, max_features='sqrt',\n",
-       "                      min_samples_leaf=2, min_samples_split=5,\n",
-       "                      n_estimators=1800)"
+       "RandomForestRegressor(bootstrap=False, max_depth=48, max_features='sqrt',\n",
+       "                      min_samples_leaf=2, n_estimators=600)"
       ]
      },
-     "execution_count": 317,
+     "execution_count": 326,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "rf_optimized = RandomForestRegressor(bootstrap= False,\n",
-    " max_depth= 10,\n",
+    " max_depth= 48,\n",
     " max_features= 'sqrt',\n",
     " min_samples_leaf= 2,\n",
-    " min_samples_split= 5,\n",
-    " n_estimators= 1800)\n",
+    " min_samples_split= 2,\n",
+    " n_estimators= 600)\n",
     "\n",
     "rf_optimized.fit(X_train, y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 327,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "y_pred = rf_optimized.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 328,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "R Square: 0.6958759642175407 \n",
+      " MSE: 1005233966.2461799 \n",
+      " RMSE: 31705.424870929895 \n",
+      " MAE: 21326.191820551376\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import r2_score\n",
+    "from sklearn.metrics import mean_squared_error\n",
+    "from sklearn.metrics import mean_absolute_error\n",
+    "r_square = r2_score(y_test, y_pred)\n",
+    "MSE = mean_squared_error(y_test, y_pred)\n",
+    "RMSE = np.sqrt(MSE)\n",
+    "MAE = mean_absolute_error(y_test, y_pred)\n",
+    "print(\"R Square: {r_square} \\n MSE: {MSE} \\n RMSE: {RMSE} \\n MAE: {MAE}\".format(r_square = r_square, MSE = MSE, RMSE = RMSE, MAE = MAE))"
+   ]
   }
  ],
  "metadata": {
